--- a/less/hacker.less
+++ b/less/hacker.less
@@ -1,6 +1,6 @@
 
 // import bootstrap base
-@import "bootstrap/bootstrap.less";
+@import "../node_modules/bootstrap/less/bootstrap.less";
 
 // import custom variables
 @import "hacker/_variables.less";
