--- a/less/hacker/_variables.less
+++ b/less/hacker/_variables.less
@@ -45,9 +45,9 @@ by Tobin Brown, 2015
 
 
 // Typography
-@font-family-sans-serif:    Monospace;
-@font-family-serif:         Monospace;
-@font-family-monospace:     Monospace;
+@font-family-sans-serif:    "IBM Plex Mono";
+@font-family-serif:         "IBM Plex Mono";
+@font-family-monospace:     "IBM Plex Mono";
 @font-family-base:          @font-family-monospace;
 @font-size-base:            16px;
 @font-size-large:           ceil(@font-size-base * 1.25);
