--- a/less/hacker/_variables.less
+++ b/less/hacker/_variables.less
@@ -28,8 +28,8 @@ by Tobin Brown, 2015
 // Scaffolding
 @body-bg:                   @hacker-bg;
 @text-color:                @gray-dark;
-@link-color:                @brand-primary;
-@link-hover-color:          darken(@link-color, 15%);
+@link-color:                lighten(@brand-primary, 20%);
+@link-hover-color:          lighten(@link-color, 10%);
 @padding-base-vertical:     6px;
 @padding-base-horizontal:   12px;
 @padding-large-vertical:    10px;
